gap fix

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -34,6 +34,7 @@
   display: none;
   position: absolute;
   width: 150px;
+  margin-top: -1px;
   z-index: 10;
   background-color: rgb(20, 20, 20);
 }
@@ -48,6 +49,10 @@
   border-left: 4px solid rgba(0, 0, 0, 0);
 }
 .dropdown-content a:hover {
+  border-left: 4px solid rgb(255, 0, 0);
+  border-right: 4px solid rgba(0, 0, 0, 0);
+}
+.dropdown-content a.selected {
   border-left: 4px solid rgb(255, 0, 0);
   border-right: 4px solid rgba(0, 0, 0, 0);
 }
